--- a/Comp2084-Assignment1/Web.config
+++ b/Comp2084-Assignment1/Web.config
@@ -11,6 +11,10 @@
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
   </system.web>
+  <!-- Validation settings -->
+  <appSettings>
+    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
+  </appSettings>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
     <modules>
