--- a/Comp2084-Assignment1/packages.config
+++ b/Comp2084-Assignment1/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="bootstrap" version="4.0.0-alpha4" targetFramework="net452" />
+  <package id="HubSpot.Tether" version="1.1.1" targetFramework="net452" />
   <package id="jQuery" version="3.1.1" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights" version="2.1.0" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.0.1" targetFramework="net452" />
